# sprints-Tasks

./: README.md
Capstone Project/: config.txt  run_logs.txt
Capstone Project/Host/: CMakeLists.txt  Logger_receiver.cpp
Capstone Project/RSPI4/: CMakeLists.txt  Daemon.cpp  Mathematical.cpp
Capstone Project/libraries/: file.cpp  file.h  ipc_library.cpp  ipc_library.h  logger.cpp  logger.h
phase_2/CMake_based_project/: CMakeLists.txt
phase_2/CMake_based_project/include/: Print.h  WriteInFile.h
phase_2/CMake_based_project/src/: main.cpp  print.cpp
phase_2/Create a make file to build/: Makefile
phase_2/create_static_shared_library/: main.c  mathlib.c  mathlib.h  readme.txt  shared_build.sh  static_build.sh  test_shared  test_static
phase_2/project_folder/: CMakeLists.txt  project.txt
phase_2/project_folder/src/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  FileHandlerMain.cpp  Logger.cpp  Logger.h  NamedPipe.cpp  NamedPipe.h  Requester.cpp  Requester.h  SharedMemory.cpp  SharedMemory.h  requester_main.cpp
phase_2/project_folder/tests/: CMakeLists.txt  test_file_handler.cpp
phase_3/: 0001-patch-file-for-sprints.patch  repo_link.txt
